Can reach all pages and connected google location

--- a/Meny.html
+++ b/Meny.html
@@ -18,11 +18,30 @@
   </body>
   <body>
     
-    <img src="frenchbanner1.jpg" class="rounded mx-auto d-block" alt="Fromage" width="1200" height="300">
-    <li class="nav-item">
-      <a type="button" class="btn btn-dark" aria-current="page" href="Fromage.html">Start</a>
-    </li>
-
+    <img src="jpgs/frenchbanner1.jpg" class="rounded mx-auto d-block" alt="Fromage" width="1200" height="300">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container">
+            <button class="navbar-toggler" type="button" class="btn btn-outline-dark" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a type="button" class="btn btn-dark" aria-current="page" href="BonFromage.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a type="button" class="btn btn-dark" href="Meny.html">Meny</a>
+                  <li class="nav-item">
+                      <a type="button" class="btn btn-dark" href="About.html">Om oss</a>
+                    <li class="nav-item">
+                <li class="nav-item">
+                  <a type="button" class="btn btn-dark" href="Location.html">Hitta oss</a>
+                <li class="nav-item">
+              </ul>
+              </form>
+            </div>
+          </div>
+        </nav>
     <h1 class="font-italic">Frukost meny</h2>
       <ol>
          <li class="font-italic"> Lilla menyn - Croissant, ost & skinka, kaffe | 49Kr</li>
