--- a/Location.html
+++ b/Location.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Fromage</title>
+    <title>Plats</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit= 1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-      
+    <!-- Add the Google map view of your location here -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -18,30 +18,32 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
   <body>
-    <img src="htmlFrontpicture.jpg" class="rounded mx-auto d-block" alt="Fromage" width="1200" height="250">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
-            <a type="button" class="btn btn-dark" href="#">Fromage</a>
           <button class="navbar-toggler" type="button" class="btn btn-outline-dark" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button> 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a type="button" class="btn btn-dark" aria-current="page" href="#">Home</a>
+                <a type="button" class="btn btn-dark" aria-current="page" href="BonFromage.html">Home</a>
               </li>
               <li class="nav-item">
                 <a type="button" class="btn btn-dark" href="Meny.html">Meny</a>
                 <li class="nav-item">
-                    <a type="button" class="btn btn-dark" href="About">Om oss</a>
+                    <a type="button" class="btn btn-dark" href="About.html">Om oss</a>
                   <li class="nav-item">
               <li class="nav-item">
-                <a type="button" class="btn btn-dark" href="Location">Hitta oss</a>
+                <a type="button" class="btn btn-dark" href="Location.html">Hitta oss</a>
               <li class="nav-item">
             </ul>
             </form>
           </div>
         </div>
       </nav>
+      <div><h1 class="font-italic">Skaraborgsvägen 3c, 506 30 Borås</h2></div>
+        <div id="map-container">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2130.4546088550314!2d12.935938315294408!3d57.72572144558306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465aa735efffffff%3A0x827a79acdd2c25bc!2sThe%20Company!5e0!3m2!1sen!2sse!4v1677102104032!5m2!1sen!2sse" title="Fromage" width="600" height="300" style="border: 1px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></nav>
+      </div>
   </body>
 </html>
